@@ -56,6 +56,7 @@ typedef enum _GstTTMLAttributeType {
   GST_TTML_ATTR_DISPLAY_ALIGN,
   GST_TTML_ATTR_OVERFLOW,
   GST_TTML_ATTR_TEXTOUTLINE,
+  GST_TTML_ATTR_ZINDEX,
   GST_TTML_ATTR_UNKNOWN
 } GstTTMLAttributeType;
 
